# Auditable-Privacy-Asset

./: Cargo.toml  README.md
aggregator/: Cargo.toml
audit-zero/: Cargo.toml
audit-zero/src/: commitment.rs  error.rs  keys.rs  nullifier.rs  snark.rs  structs.rs  utxo.rs
auditor/: Cargo.toml
payment/: Cargo.toml
payment/src/: audit_gadget.rs  audit_poseidon.rs  deposit.rs  lib.rs  memo.rs  nullifier.rs  poseidon.rs  snark.rs  structs.rs  transfer.rs  utxo.rs  withdraw.rs
