[package]
name = "app-payment"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
ark-bn254.workspace = true
ark-ed-on-bn254.workspace = true
ark-relations.workspace = true
ark-r1cs-std.workspace = true
ark-crypto-primitives.workspace = true
ark-groth16.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
